--- a/src/unit_tests/config_files/test_syscheck_win.conf
+++ b/src/unit_tests/config_files/test_syscheck_win.conf
@@ -14,11 +14,15 @@
     <auto_ignore frequency="10" timeframe="3600">no</auto_ignore>
 
     <!-- Maximum number of files to monitor -->
-    <db_entry_limit>
+    <file_limit>
       <enabled>yes</enabled>
-      <files>50000</files>
-      <registries>50000</registries>
-    </db_entry_limit>
+      <entries>50000</entries>
+    </file_limit>
+
+    <registry_limit>
+      <enabled>yes</enabled>
+      <entries>50000</entries>
+    </registry_limit>
 
     <!-- Default files to be monitored. -->
     <directories recursion_level="0" restrict="regedit.exe$|system.ini$|win.ini$">%WINDIR%</directories>
