--- a/ruleset/sca/windows/cis_win10_enterprise.yml
+++ b/ruleset/sca/windows/cis_win10_enterprise.yml
@@ -2308,7 +2308,7 @@ checks:
       - cis_csc: ["6.3","16.6"]
     condition: all
     rules:
-      - 'c:auditpol.exe /get /subcategory:"Process Creation" -> r:Failure'
+      - 'c:auditpol.exe /get /subcategory:"Account Lockout" -> r:Failure'
 
   - id: 15152
     title: "Ensure 'Audit Group Membership' is set to include 'Success'"
