--- a/api/test/integration/test_agent_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_GET_endpoints.tavern.yaml
@@ -4382,7 +4382,12 @@ stages:
     response:
       status_code: 200
       json:
-        <<: *basic_response
+        error: 0
+        data:
+          affected_items: !anything
+          failed_items: []
+          total_affected_items: 27
+          total_failed_items: 0
 
   - name: Get the different combinations for os.platform
     request:
@@ -4434,6 +4439,38 @@ stages:
               os:
                 name: unknown
 
+          failed_items: []
+          total_affected_items: !anyint
+          total_failed_items: 0
+  
+  - name: Get the different combinations for group
+    request:
+      verify: False
+      <<: *distinct_request
+      params:
+        fields:
+          - group
+    response:
+      status_code: 200
+      json:
+        error: 0
+        data:
+          affected_items:
+            - count: !anyint
+              group:
+                - group3
+            - count: !anyint
+              group:
+                - default
+            - count: !anyint
+              group:
+                - group1
+            - count: !anyint
+              group:
+                - group2
+            - count: !anyint
+              group:
+                - unknown
           failed_items: []
           total_affected_items: !anyint
           total_failed_items: 0
@@ -4596,7 +4633,7 @@ stages:
             - count: 2
               node_name: 'unknown'
           failed_items: []
-          total_affected_items: 2
+          total_affected_items: 1
           total_failed_items: 0
 
   - name: Try to show agents with wrong search
