--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -8670,6 +8670,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Get group files"
@@ -11068,6 +11069,7 @@ paths:
         - $ref: '#/components/parameters/tag'
         - $ref: '#/components/parameters/log_level'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Wazuh node logs"
@@ -12705,6 +12707,7 @@ paths:
         - $ref: '#/components/parameters/tag'
         - $ref: '#/components/parameters/log_level'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Wazuh logs"
@@ -13942,6 +13945,7 @@ paths:
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/statusRLDParam'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Rule"
@@ -14723,6 +14727,7 @@ paths:
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/statusRLDParam'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "List of decoders files"
