--- a/src/engine/ruleset/integrations/windows/decoders/windows-powershell-operational.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-powershell-operational.yml
@@ -16,7 +16,7 @@ metadata:
     - https://learn.microsoft.com/en-us/powershell/scripting/windows-powershell/wmf/whats-new/script-logging?view=powershell-7.3
   versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
 
-check: $~windows.Event.System.Channel.#text==Microsoft-Windows-PowerShell/Operational
+check: $~windows.System.Channel.#text==Microsoft-Windows-PowerShell/Operational
 
 normalize:
  - map:
@@ -25,14 +25,14 @@ normalize:
    - event.dataset: powershell
    - event.category: +array_append/process
    - event.type: +array_append/info
-   - event.sequence: $~windows.Event.EventData.SequenceNumber
+   - event.sequence: $~windows.EventData.SequenceNumber
 
   # User fields
-   - ~temp.user_parts: +split/$~windows.Event.EventData.User/\
+   - ~temp.user_parts: +split/$~windows.EventData.User/\
    - destination.user.domain: $~temp.user_parts.0
    - destination.user.name: $~temp.user_parts.1
    - related.user: +array_append/destination.user.name
-   - ~temp.connected_user_parts: +split/$~windows.Event.EventData.ConnectedUser/\
+   - ~temp.connected_user_parts: +split/$~windows.EventData.ConnectedUser/\
    - source.user.domain: $~temp.connected_user_parts.0
    - source.user.name: $~temp.connected_user_parts.1
    - user.name: $source.user.name
@@ -40,17 +40,17 @@ normalize:
    - related.user: +array_append/$source.user.name
 
    # File fields
-   - file.path: $~windows.Event.EventData.Path
-   - file.path: $~windows.Event.EventData.ScriptName
+   - file.path: $~windows.EventData.Path
+   - file.path: $~windows.EventData.ScriptName
    - ~temp.file_data: +parse_file/$file.path
    - file.directory: $~temp.file_data.path
    - file.extension: $~temp.file_data.ext
    - file.name: $~temp.file_data.name
 
   # Process fields
-   - process.entity_id: $~windows.Event.EventData.HostID
-   - process.command_line: $~windows.Event.EventData.HostApplication
-   - process.title: $~windows.Event.EventData.HostName
+   - process.entity_id: $~windows.EventData.HostID
+   - process.command_line: $~windows.EventData.HostApplication
+   - process.title: $~windows.EventData.HostName
    - process.executable: $file.path
 
  - check: $event.code=="4105"
